--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="home-bgImg-container">
+
+        <!--Home Nav-->
+
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="" class="nav__link--active">Home</a>
+                </li>
+
+                <li class="nav__item">
+                    <a href="" class="nav__link">About Me</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">My Projects</a>
+                </li>
+                <li class="nav__item">
+                    <a href="" class="nav__link">Contact</a>
+                </li>
+
+            </ul>
+        </nav>
+
+
+
+    </div>
+
 </body>
 </html>
